# rov_il

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
docs/: STATUS.md  SUBAGENTS.md  dependency-plan.md  marinegym-hydrodynamics-eventterm.md  rov-base-control-design.md  teleoperation-control-notes.md
docs/plans/: pick_stone_color_nl_plan.md
rov_lab/: README.md  pyproject.toml
rov_lab/assets/: README.md
rov_lab/scripts/: inspect_usd.py  teleop_se3_agent.py
rov_lab/source/rov_lab/: __init__.py
rov_lab/source/rov_lab/assets/: __init__.py
rov_lab/source/rov_lab/assets/objects/: __init__.py
rov_lab/source/rov_lab/assets/robots/: __init__.py  blue_rov.py
rov_lab/source/rov_lab/assets/scenes/: __init__.py  under_water.py
rov_lab/source/rov_lab/assets/sensors/: __init__.py
rov_lab/source/rov_lab/assets/sensors/barometer/: __init__.py  barometer.py  barometer_cfg.py  barometer_data.py
rov_lab/source/rov_lab/assets/sensors/dvl/: __init__.py  dvl.py  dvl_cfg.py  dvl_data.py  dvl_pattern_cfg.py
rov_lab/source/rov_lab/assets/sensors/imaging_sonar/: __init__.py  imaging_sonar.py  imaging_sonar_cfg.py  imaging_sonar_data.py
rov_lab/source/rov_lab/assets/sensors/utils/: imaging_sonar_kernels.py  rerun_visualizer.py  uw_renderer_utils.py
rov_lab/source/rov_lab/assets/sensors/uw_camera/: __init__.py  uw_camera.py  uw_camera_cfg.py  uw_camera_data.py
rov_lab/source/rov_lab/devices/: __init__.py  action_process.py
rov_lab/source/rov_lab/devices/keyboard/: __init__.py  rov_keyboard.py
rov_lab/source/rov_lab/tasks/: __init__.py
rov_lab/source/rov_lab/tasks/pick_stone/: __init__.py  pick_stone_env_cfg.py  pick_stone_mimic_env_cfg.py
rov_lab/source/rov_lab/tasks/pick_stone/mdp/: __init__.py  events.py  observations.py  recorders.py  recorders_cfg.py  task_metadata.py  terminations.py
rov_lab/source/rov_lab/tasks/template/: __init__.py  rov_single_arm_env_cfg.py
rov_lab/source/rov_lab/tasks/template/mdp/: __init__.py  hydrodynamics.py  rov_actions.py  rov_observations.py
rov_lab/source/rov_lab/utils/: __init__.py  paths.py
rov_lerobot/: README.md  __init__.py  pyproject.toml
rov_lerobot/lerobot_datasets/: __init__.py
rov_lerobot/lerobot_datasets/pick_stone/: README.md  __init__.py  cli.py  config.py  converter.py  features.py  hdf5_reader.py
rov_lerobot/tests/lerobot_datasets/pick_stone/: test_converter_tasks.py  test_hdf5_reader.py  test_task_metadata.py
